# qqmusic-decryptor

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SKILL_README.md  add_skip_count.py  analyze_stats.py  apply_final_fix.py  apply_fix.py  apply_fixes_v2.py  auto_decrypt.bat  auto_decrypt.sh  build.spec  check_current_paths.py  check_env.bat  check_env.sh  check_gui_status.py  check_status.py  complete_fix.py  config.ini  config.ini.backup  debug_lines.py  diagnose_frida.py  diagnose_gui.py  final_fix.py  fix_both.py  fix_complete_stats.py  fix_final.py  fix_gui.py  fix_scanning.py  fix_script.py  fix_stats.py  fix_stats_final.py  fix_stats_logic.py  install_dependencies.bat  launch_gui.bat  main_cli.py  (+39 more)
.skills/: qqmusic_decryptor.json  qqmusic_decryptor.md
.wolf/: OPENWOLF.md  anatomy.md  cerebrum.md  config.json  identity.md  memory.md  token-ledger.json
doc/: ALBUM_METADATA_FEATURE.md  CLEANUP_FIX_SCRIPTS.md  DATE_FIX_COMPLETION_REPORT.md  FEATURE_USER_GUIDE.md  FLAC_METADATA_RESEARCH.md  GUI_STARTUP_GUIDE.md  GUI日志显示问题修复报告.md  OGG_METADATA_FIX_DOCUMENT.md  OGG_METADATA_IMPLEMENTATION_RESULT.md  README.md  RUN_SCRIPT_GUIDE.md  claude.md  doc_index.md  index.md  problem_solved.md  元数据处理优化测试方案.md  封面保存位置修复实施方案.md  控制台输出优化报告.md  统计逻辑修复实施方案.md  统计逻辑修复方案_方案A.md  统计逻辑修复测试报告.md  音轨号写入失败修复方案.md
drops/: MANUAL_FIX_INSTRUCTIONS.txt  fix_and_launch_gui.bat  fix_default_paths.bat  fix_gui_all.bat  fix_gui_paths.bat  fix_paths.bat  quick_fix_paths.bat  run_gui_fixed.bat  ultra_simple_fix.bat
gui_backup/: main_gui.py
(+106 files in other folders)
