[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qqmusic-decrypt"
version = "1.0.0"
description = "QQ音乐加密文件批量解密工具 - 基于Frida动态插桩"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.8"
dependencies = [
    "frida==16.7.10",
    "mutagen>=1.47.0",
    "requests>=2.31.0",
]

[project.scripts]
qqmusic-decrypt = "qqmusic_decrypt.cli:main"
qqmusic-meta = "qqmusic_decrypt.cli:supplement_main"
qqmusic-gui = "qqmusic_decrypt.cli:gui_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# 允许现有代码中的模式，逐步收紧
lint.ignore = [
    "F401",    # 未使用的导入（一些模块级导入用于 __init__）
    "E722",    # 裸 except（现有代码模式）
    "F841",    # 未使用的变量（现有代码模式）
    "F541",    # f-string 无占位符（现有代码模式）
]

[tool.setuptools.package-data]
qqmusic_decrypt = []
